Closed Bug 103317 Opened 24 years ago Closed 24 years ago

nsEditor::CloneAttributes() has memory leak (should use nsCOMPtr)

Categories

(Core :: DOM: Editor, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla0.9.6

People

(Reporter: cmanske, Assigned: cmanske)

Details

(Whiteboard: EDITORBASE)

Attachments

(1 file)

This method gets an attribute node like this: nsIDOMNode* attrNode; when it should use this: nsCOMPtr<nsIDOMNode> attrNode;
Attached patch FixSplinter Review
Status: NEW → ASSIGNED
Keywords: patch, review
Whiteboard: EDITORBASE, FIX IN HAND, need r=,sr=
Target Milestone: --- → mozilla0.9.6
Attachment #52232 - Flags: superreview+
checked in
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Keywords: patch, review
Resolution: --- → FIXED
Whiteboard: EDITORBASE, FIX IN HAND, need r=,sr= → EDITORBASE
verified
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: