Fix memory leak (not using nsCOMPtr) in editor, b=103317, r=rcassin, sr=kin